--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@drkmortho" />
+    <meta name="twitter:site" content="@https://drkarthikmanchala.com/" />
     <meta name="twitter:title" content="Dr. Karthik Manchala | Orthopaedic Specialist in Hyderabad" />
     <meta name="twitter:description" content="Trusted orthopaedic care with 12+ years of experience. Joint replacement, fracture fixation, arthroscopy & sports injuries." />
     
@@ -32,7 +32,7 @@
       "@context": "https://schema.org",
       "@type": "MedicalBusiness",
       "name": "Dr. Karthik Manchala Ortho Clinic",
-      "url": "https://drkmortho.com",
+      "url": "https://drkarthikmanchala.com/",
       "telephone": "+91-6281894631",
       "priceRange": "$$",
       "address": {
